# furcast-tg-bot

./: .env.example  .gcloudignore  .gitignore  Pipfile  README.md  config.toml.example  furcast-tg-bot.service  main.py  pyproject.toml  requirements.txt  server.py  setup.cfg  test_request.py
.github/workflows/: python-lint.yml
contrib/: furcastbot.service  openbsd.rc  server.py  test_request.py
furcastbot/: __init__.py  config.py  furcastbot.py  live.py  membership.py  nextshow.py  report.py  topics.py  utility.py
