[metadata]
name = furcastbot
version = attr: furcastbot.__version__
description = Utility bot for FurCast
long_description = file: README.md
long_description_content_type = text/markdown
author = Riley Carter
author_email = riley@bad.pet
url = https://github.com/xbnstudios/furcast-tg-bot
license = GPLv3
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[options]
python_requires = >=3.9, <4
packages = find:
install_requires =
    # Copy changes to requirements.txt
    python-dateutil >=2.8.2,<3
    python-telegram-bot >=13.11,<14
    requests >=2.27.1,<3
    Flask >=2.0.3,<3
    ddate >=0.1.2,<1
    ujson >=5.1.0,<6
    tomlkit >= 0.10.1,<1

[options.extras_require]
dev =
    black
    flake8
    flake8-coding
    flake8-import-order
    types-python-dateutil

[options.entry_points]
console_scripts =
    furcastbot = furcastbot.furcastbot:main

[flake8]
max-line-length = 99
application-import-names = main, furcastbot
import-order-style = google
exclude =
    venv/*
no-accept-encodings = True
ignore =
    # "line break before binary operator" - black conflict
    W503,
    # Unnecessary on py3.9+
    FI10,FI11,FI12,FI13,FI14,FI15,FI16,FI17,
    # Needed until py3.11
    FI58,
