[metadata]
name = furcastbot
version = attr: furcastbot.__version__
description = Utility bot for FurCast
long_description = file: README.md
long_description_content_type = text/markdown
author = Riley Carter
author_email = riley@bad.pet
url = https://github.com/xbnstudios/furcast-tg-bot
license = GPLv3
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[options]
python_requires = >=3.8, <4
packages = find:
install_requires =
    # Copy changes to requirements.txt
    pluggy >=1.0.0,<2
    python-dateutil >=2.8.2,<3
    python-telegram-bot[job-queue] >=20.0,<21
    requests >=2.28.2,<3
    ddate >=0.1.2,<1
    ujson >=5.7.0,<6
    tomlkit >= 0.11.6,<1
    flask[async] >= 2.3.3,<4

[options.extras_require]
dev =
    black
    flake8
    flake8-coding
    flake8-import-order
    types-python-dateutil

[options.entry_points]
console_scripts =
    furcastbot = furcastbot.furcastbot:main

[flake8]
max-line-length = 99
application-import-names = main, furcastbot
import-order-style = google
exclude =
    env/*
    venv/*
no-accept-encodings = True
ignore =
    # "line break before binary operator" - black conflict
    W503,
    # Unnecessary on py3.9+
    FI10,FI11,FI12,FI13,FI14,FI15,FI16,FI17,
    # Needed until py3.11
    FI58,
